# be-energy

./: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
apps/contracts/: Cargo.toml
apps/contracts/community_governance/: Cargo.toml
apps/contracts/community_governance/src/: lib.rs
apps/contracts/energy_distribution/: Cargo.toml
apps/contracts/energy_token/: Cargo.toml
apps/web/: .env.example  package-lock.json  package.json
apps/web/app/dashboard/: page.tsx
tooling/issues/: issue-001-dashboard-balance-contract.md  issue-002-dashboard-balance-states.md  issue-003-dashboard-wallet-address.md  issue-004-marketplace-p2p-trading.md  issue-005-admin-mint-tokens-ui.md  issue-006-activity-horizon-transactions.md  issue-007-extract-contracts-config.md  issue-008-extract-wallet-utils.md
tooling/scripts/: generate-issues.sh
