[workspace]
members = [
    "energy_token",
    "energy_distribution",
    "community_governance",
]
resolver = "2"

[workspace.package]
authors = ["BuenDia Builders"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/BuenDia-Builders/be-energy"
version = "0.1.0"

[workspace.dependencies.soroban-sdk]
version = "23.1.0"

[workspace.dependencies.stellar-access]
git = "https://github.com/OpenZeppelin/stellar-contracts"
tag = "v0.5.1"

[workspace.dependencies.stellar-macros]
git = "https://github.com/OpenZeppelin/stellar-contracts"
tag = "v0.5.1"

[workspace.dependencies.stellar-tokens]
git = "https://github.com/OpenZeppelin/stellar-contracts"
tag = "v0.5.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
